infra/zabbix/zabbix-server-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-trapper
  namespace: zabbix
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: zabbix
    app.kubernetes.io/name: zabbix
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: zabbix
    app.kubernetes.io/name: zabbix
  ports:
    - name: zabbix-trapper
      port: 10051
      targetPort: 10051
      nodePort: 30051
      protocol: TCP
