infra/zabbix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix
  namespace: zabbix
spec:
  ingressClassName: nginx
  rules:
  - host: zabbix.wccosta.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-zabbix-web
            port:
              number: 80
  tls:
  - hosts:
    - zabbix.wccosta.com.br
    secretName: wccosta-tls
